<resources>
    <string name="app_name">My Calculator</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="Divide">/</string>
    <string name="_123">123</string>
    <string name="_percent">%</string>
    <string name="c">C</string>
    <string name="x">x</string>
    <string name="divide1">÷</string>
    <string name="times">×</string>
    <string name="equal">=</string>
    <string name="_1">1</string>
    <string name="_00">00</string>
    <string name="_0">0</string>
    <string name="decimal">.</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="minus">-</string>
    <string name="e">E</string>
    <string name="plus">+</string>
    <string name="_6">6</string>
    <string name="made_by_azmat">Calculator</string>
</resources>